name:         abes-xmonad
version:      0.1.0.0
synopsis:     Abraham White's xmonad configuration
homepage:     https://github.com/WhiteAbeLincoln/abes-xmonad
license:      MIT
license-file: LICENSE
author:       Abraham White
maintainer:   abelincoln.white@gmail.com
category:     System
build-type:   Simple
cabal-version:      >=1.10

executable abes-xmonad
  main-is:             xmonad.hs
  build-depends:       X11>=1.8
                     , base >=4.9 && <5
                     , containers>=0.5.7.1
                     , xmonad-contrib>=0.15
                     , xmonad>=0.15
  hs-source-dirs:      src
  default-language:    Haskell2010
